--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Three columns preview card challenge</title>
   </head>
   <body>
-    <main>
+    <main class="bg-light-grey">
       <section
         class="container mx-auto md:py-0 py-5 min-h-screen grid place-items-center"
       >
