--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <main class="bg-light-grey">
-      <!-- One h1 is important in every website but here we dont need so hidden class is assign for that-->
-      <h1 class="hidden">Three columns preview card challenge</h1>
+      <!-- One h1 is important in every website but here we dont need so opacity-0 class is assign for that-->
+      <h1 class="text-center opacity-0">
+        Three columns preview card challenge
+      </h1>
       <section
         class="container mx-auto md:py-0 py-5 min-h-screen grid place-items-center"
       >
